[gd_scene load_steps=5 format=3 uid="uid://drr3esl1pjkv1"]

[ext_resource type="Script" uid="uid://c2m8fd326ca7v" path="res://enemies/goomba.gd" id="1_0xjyw"]
[ext_resource type="PackedScene" uid="uid://djmhg252dajnb" path="res://assets/models/goombatype.glb" id="2_k53gf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0xjyw"]
size = Vector3(0.9133301, 1.1173096, 0.8937988)

[sub_resource type="SphereShape3D" id="SphereShape3D_0xjyw"]
radius = 15.0

[node name="Goomba" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 13
script = ExtResource("1_0xjyw")
movement_speed = 10.0
metadata/_custom_type_script = "uid://dayute38a7ih5"

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.25

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0030517578, 0.3086548, 0.015258789)
shape = SubResource("BoxShape3D_0xjyw")

[node name="TargetingArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetingArea"]
shape = SubResource("SphereShape3D_0xjyw")

[node name="GoombaModel" parent="." instance=ExtResource("2_k53gf")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.4273637, 0)

[connection signal="body_entered" from="TargetingArea" to="." method="_on_targeting_area_body_entered"]
[connection signal="body_exited" from="TargetingArea" to="." method="_on_targeting_area_body_exited"]
